# alpha_autopilot

./: .gitignore  CMakeLists.txt  README.md  raspi0_setup.md
alpha_autopilot/: CMakeLists.txt  nodelet_plugins.xml  package.xml
alpha_autopilot/cfg/: DynamicPID.cfg
alpha_autopilot/include/alpha_autopilot/: AlphaCommand.h  AlphaMode.h  AutoPilot.h  Command.h  PID.h  Types.h
alpha_autopilot/launch/: autopilot.launch  pid.launch
alpha_autopilot/src/: AlphaCommand.cpp  AutoPilot.cpp  AutoPilot_node.cpp  Command.cpp  Command_node.cpp  Missions.cpp  PID.cpp  PID_sample.cpp
alpha_drivers/: CMakeLists.txt  nodelet_plugins.xml  package.xml
alpha_drivers/include/alpha_drivers/: PCA9685.h  RCOut_nodelet.h  RaspiCam.h  ahrs.h  altitude_estimator.h  mpu9250.h  ms5611.h  pca9685.h  spi_sensors_nodelet.h
alpha_drivers/include/alpha_drivers/decoder/: Functor.h  GPIO_RPI.h  RCInput.h  RCInput_RPI.h  Scheduler.h  Thread.h  common.h  decoder_nodelet.h  sbus.h
alpha_drivers/launch/: drivers.launch
alpha_drivers/msg/: AirPressure.msg  IMU.msg
alpha_drivers/src/: PCA9685.cpp  RCOut_node.cpp  RCOut_nodelet.cpp  RaspiCam.cpp  ahrs.cpp  altitude_estimator.cpp  mpu9250.cpp  ms5611.cpp  pca9685.cpp  raspi_camera.cpp  spi_sensors.cpp  spi_sensors_nodelet.cpp  status_indicator.cpp  test_mpu9250.cpp  test_ms5611.cpp
alpha_drivers/src/decoder/: GPIO_RPI.cpp  RCInput.cpp  RCInput_RPI.cpp  Scheduler.cpp  Thread.cpp  decoder_nodelet.cpp  main.cpp  sbus.cpp
alpha_localization/: CMakeLists.txt  CMakeLists.txt~  nodelet_plugins.xml  package.xml
alpha_localization/config/: CameraParameters.yaml  CameraParameters.yaml.bak  MarkerCorners.yaml  MarkerCorners.yaml.bak
alpha_localization/include/alpha_localization/: MarkerLocalization.h  RPP.h  ahrs.h  ahrs_nodelet.h  ms5611.h  pose_nodelet.h
alpha_localization/launch/: marker_localization.launch
alpha_localization/src/: #arhs.cpp#  #test_aruco.cpp#  #test_detection.cpp#  #test_hsv.cpp#  MarkerLocalization.cpp  RPP.cpp  Rpoly.cpp  ahrs.cpp  ahrs_node.cpp  ahrs_nodelet.cpp  dev_memo.md  dev_memo.md~  marker_localization_node.cpp  mpu9250.cpp  ms5611.cpp  pose_nodelet.cpp  simple_pose.cpp  test_aruco.cpp  test_aruco.cpp~  test_chessboard.cpp  test_detection.cpp  test_hsv.cpp
alpha_msgs/: CMakeLists.txt  package.xml
alpha_msgs/msg/: AirPressure.msg  RC.msg
alpha_simulator/: CMakeLists.txt  package.xml
alpha_simulator/include/alpha_simulator/: AircraftModel.cpp  AircraftModel.h  AircraftPlugin.h  SensorRemapper.h  control.h  properties.h
alpha_simulator/launch/: aircraft_sim.launch  spawn_aircraft.launch
alpha_simulator/src/: AircraftControl.cpp  AircraftModel.cpp  AircraftPlugin.cpp  Properties.cpp  SensorRemapper.cpp
alpha_simulator/urdf/: aircraft.urdf.xacro  alpha_sensors.urdf.xacro  base.urdf.xacro  generic_camera.urdf.xacro
alpha_teleoperation/: CMakeLists.txt  package.xml
alpha_teleoperation/src/: main.cpp
alpha_teleoperation/src/ROS/: thread_ros.cpp  thread_ros.h
